added title to notebook

--- a/adherence-pearson.ipynb
+++ b/adherence-pearson.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functional Health Literacy on Treatment Adherence among Type 2 Diabetic Clients - Using SAS\n",
+    "By Alfeo Sabay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
